Fix compiling failing